--- a/engine/test/sequence/CMakeLists.txt
+++ b/engine/test/sequence/CMakeLists.txt
@@ -1,4 +1,4 @@
-qt_add_executable(sequence_test WIN32
+add_executable(sequence_test WIN32
     ../mastertimer/mastertimer_stub.cpp ../mastertimer/mastertimer_stub.h
     sequence_test.cpp sequence_test.h
 )
